# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gendiff/: __init__.py  arg_parser.py  comparator.py  file_parser.py  gendiff.py  parser.py
gendiff/scripts/: scripts.py
gendiff/styles/: formater.py  json_formater.py  plain.py  stylish.py
tests/: test_gendiff.py
tests/fixtures/json_files/: file_3.json  file_7.json  file_8.json
tests/fixtures/results/: json_result_2.txt  result_2.txt
tests/fixtures/yaml_files/: file_3.yml
